# download-stats

./: .gitignore  Cargo.toml  README.md  config.toml  download-stats.db
.claude/: settings.local.json
.github/workflows/: collect-stats.yml
src/: aggregate.rs  charts.rs  commands.rs  config.rs  crates_io.rs  db.rs  dispatch.rs  github.rs  lib.rs  main.rs  query.rs
